tests/errors/extraneous_arg_type.ceos
fn _(a: String) -> Void {
  print(a : String)
}("ASD")
